# imc-prosperity-4

./: .gitignore  CLAUDE.md  README.md  V8A_CLEAN_STRATEGY.py  backtest.sh  plan.md  pyproject.toml  submit.sh
.claude/: settings.json
analysis/: OPTIMIZATION_PLAN.md  V8A_50_PRODUCTS_TABLE.md  V8_ANALYSIS_FINAL.md
backtester/: __main__.py  data.py  file_reader.py  models.py  parse_submission_logs.py  runner.py
dashboard/: README.md  __main__.py  app.py  constants.py  data_loader.py
docs/: r5_strategy_conclusions.md  round1-rules.md  round2-briefing-transcript.md  round2-rook-e1-hints.md  round2-rules.md  round3-rules.md  round4-manual.md  round4-rook-e1-hints.md  round4-rules.md  round5-rook-hints.md  round5-rules.md  strategy-principles.md
legacy/: agent3_hedging_substitution_v2.py  analyze_velvet_balance.py  execute_analysis.py  infer_vev_payoff.py  manual_biopod_bids.py  plan.md  quick_analysis.py  round5_v8b_blackholes_50.py  simple_local_analysis.py  sweep_hydrogel_params.py
logs/: 575780.py  578611.json  578611.py  579242.json
research/: agent3_hedging_substitution_v1.py  analyze_logs.py  bot_patterns.py  build_submission.py  butterfly_check.py  discord_templates.md  edge_sweep_sim.py  h10_impact_distribution.py  h11_bot_absence.py  h3_hp_regime_detection.py  h5_volatility_signal.py  h6_counterparty_pairing.py  h9_conditional_continuation.py  heston_fit.py  inline_analysis.py  insight5_cross_product.py  oos_v10.csv  optimize.py  optimize_fine.py  r5_directional_scan.py  r5_microchip_edge_sweep.py  r5_snackpack_edge_sweep.py  r5_uv_visor_mo_sim.py  (+31 more)
(+202 files in other folders)
