[project]
name = "prosperity4"
description = "IMC Prosperity 4 trading toolkit"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = [
    "ipython>=8.18.1",
    "jsonpickle>=4.0.2",
    "orjson>=3.10.15",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
backtest = "backtester.__main__:main"

[tool.setuptools.packages.find]
include = ["backtester", "backtester.*"]

[tool.setuptools.package-data]
backtester = ["resources/*/*.csv"]
